# github-action-test

./: CHANGELOG.md  README.md  pyproject.toml  setup.py  test.sh
.github/: release.yml
.github/workflows/: bump_version.yaml  create_release.yml  deploy.yaml  deploy_template.yaml  deploy_with_sentry.yaml  test_env.yaml  unit_test.yaml
tgr-resource-inventory-0.4.2/: PKG-INFO  pyproject.toml
