[tool.poetry]
name = "tgr-resource-inventory"
version = "0.4.2"
description = "Horangi Resource Inventory module that handles all Resource related operations."
authors = ["Andriano Winatra"]

[tool.poetry.dependencies]
python = "^3.8"
ujson = "^4.1.0"
jmespath = "^0.10.0"


[tool.poetry.dev-dependencies]
devtools = "^0.6.1"
Pygments = "^2.10.0"
pytest = "^6.2.4"
SQLAlchemy = "^1.4.26"
pytest-asyncio = "^0.16.0"
asyncpg = "^0.24.0"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.2"
tag_format = "$version"
version_files = [
    "setup.py",
    "pyproject.toml"
]


[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
